--- a/docs/summaries-leic51d.adoc
+++ b/docs/summaries-leic51d.adoc
@@ -56,3 +56,25 @@
 ** link:lecture-notes/01-01-servlets.adoc[Servlets].
 ** link:exercises-and-guides/01-00-spring-boot-mvc.adoc[Spring Boot and Spring MVC].
 ** link:https://docs.spring.io/spring-framework/reference/web/webmvc.html[Spring MVC framework].
+
+== Lecture 4 - 2024-09-19
+
+* The link:https://docs.spring.io/spring-framework/reference/web/webmvc.html[Spring MVC framework].
+** The Spring MVC processing pipeline.
+** Argument resolution - available methods and extensibility.
+** Result value handling and message converters - available methods and extensibility.
+** Handler interceptors and their comparison with servlet filters.
+** Usage examples.
+* Presentation of the semester project.
+** Goals and requirements.
+** Guidance on how to start the design and development.
+* An introduction to HTTP APIs.
+** In-process APIs vs. remote APIs.
+*** Characterization.
+*** Versioning
+** Remote APIs evolution, client types and exposed functionality.
+
+* Lecture resources:
+** link:../code/jvm/spring-boot-mvc-intro[Project with Spring MVC usage examples and extensibility examples].
+** link:https://docs.spring.io/spring-framework/reference/web/webmvc.html[Spring MVC framework].
+** link:lecture-notes/02-00-api-types-slides.pdf[API Types and Evolution].
