--- a/docs/exercises-and-guides/01-01-code-organization-and-tests.adoc
+++ b/docs/exercises-and-guides/01-01-code-organization-and-tests.adoc
@@ -8,7 +8,7 @@ This guide aims to improve the understanding of the backend code organization, t
 
 === Setting up the environment
 
-* Checkout the latest commit in the `main` branch of the `s2425i-51fd-51n-public` repository.
+* Checkout the latest commit in the `main` branch of the `s2425i-51d-51n-public` repository.
 * Open one or more shells in the `code/jvm` folder.
 * Open the `jvm` Gradle-based project in Intellij.
 ** Ensure project loading is successful.
