--- a/docs/summaries-leic51n.adoc
+++ b/docs/summaries-leic51n.adoc
@@ -94,3 +94,8 @@
 * Lecture resources:
 ** link:lecture-notes/01-02-backend-code-organization.adoc[Backend code organization].
 ** link:../code/jvm/tic-tac-toe[Tic-tac-toe project].
+
+== Lecture 6 - 2024-09-26
+
+* Laboratory class, guided by link:./exercises-and-guides/01-01-code-organization-and-tests.adoc[Code organization and tests].
+* Repository design and transaction management.
