adds summaries for weeks 6 and 7

--- a/docs/summaries-leic51n.adoc
+++ b/docs/summaries-leic51n.adoc
@@ -162,4 +162,18 @@
 
 * No lecture.
 
+== Lecture 11 - 2024-10-14
 
+* Support the first phase of the project development.
+
+== Lecture 12 - 2024-10-17
+
+* Support the first phase of the project development.
+
+== Lecture 13 - 2024-10-21
+
+* HTTP caching (link:https://www.rfc-editor.org/rfc/rfc9111.html(RFC 9111)) and HTTP conditional requests.
+
+== Lecture 14 - 2024-10-24
+
+* Project first phase presentations.
