--- a/docs/summaries-leic51n.adoc
+++ b/docs/summaries-leic51n.adoc
@@ -248,3 +248,28 @@
 * Lecture resources:
 ** link:https://react.dev[React library].
 ** link:../code/js/react-intro[react-intro]
+
+== Lecture 19 - 2024-11-11
+
+* link:https://react.dev/reference/react/hooks[React hooks]
+** State management and effect management.
+** Usage rules.
+** Triggering effects and the dependency array.
+* Communication between child and parent components.
+* Examples - application with a counter and a stopwatch.
+
+* Lecture resources:
+** link:https://react.dev[React library].
+** link:../code/js/react-intro[react-intro].
+
+== Lecture 20 - 2024-11-14
+
+* State management using states, actions, and reducers
+** The link:https://react.dev/reference/react/useReducer[useReducer] hook.
+** The link:https://react.dev/reference/react/useRef[useRef] hook to maintain state that isn't relevant for rendering.
+** Examples: a stopwatch and a component performing HTTP requests.
+
+* Lecture resources:
+** link:https://react.dev[React library].
+** link:../code/js/react-intro[react-intro].
+
