--- a/docs/exercises-and-guides/03-00-react-exercises.adoc
+++ b/docs/exercises-and-guides/03-00-react-exercises.adoc
@@ -2,12 +2,12 @@
 
 == Show promise fulfillment
 
-Implement a component for the React library that accepts a property `f` of type `()=>Promise<string>`` and displays either the fulfillment value or the rejection reason of the promise resulting from evaluating `f``.
+Implement a component for the React library that accepts a property `f` of type `()=>Promise<string>` and displays either the fulfillment value or the rejection reason of the promise resulting from evaluating `f`.
 
-The component should also display a button that triggers the re-evaluation of the function `f`` whenever clicked.
+The component should also display a button that triggers the re-evaluation of the function `f` whenever clicked.
 This button should be disabled while the promise returned by the last evaluation has not yet been resolved.
 
-The component should respond to changes in the `f`` property.
+The component should respond to changes in the `f` property.
 
 == State with undo
 
