--- a/docs/summaries-leic51n.adoc
+++ b/docs/summaries-leic51n.adoc
@@ -294,10 +294,13 @@
 *** Child routes and the `Outlet` component.
 *** Internal application navigation without document reloading.
 ** Configuring the HTTP server to allow deep-linking.
+* Storing and communicating authentication tokens via cookies.
+** Token storage and token exfiltration via XSS.
+** Cookie storage and the `httpOnly` cookie attribute.
+** Other cookie attributes, namely `secure` and `SameSite`.
 * Example with:
 ** A context to store authentication state.
 ** A component requiring authentication.
 ** A form-based component to perform authentication.
 ** Automatic navigation to and from the authentication component, with history re-writing.
 * link:exercises-and-guides/03-00-react-exercises.adoc[Exercises].
-
