adds remaining summaries

--- a/docs/summaries-leic51d.adoc
+++ b/docs/summaries-leic51d.adoc
@@ -337,3 +337,21 @@
 
 * Supporting the project development.
 
+== Lecture 27 - 2024-12-09
+
+* Project demonstrations.
+
+== Lecture 28 - 2024-12-12
+
+* Project demonstrations.
+
+== Lecture 29 - 2024-12-16
+
+* Project discussions.
+
+== Lecture 30 - 2024-12-19
+
+* Project discussions.
+
+
+
